# stm32_4digits

./: CMakeLists.txt  github  github.pub
cmake/: gcc_stm32.cmake  gcc_stm32f4.cmake
libs/cmsis/: system_stm32f4xx.c
src/: main.cpp
